--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -178,10 +178,19 @@ textarea {
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
 
+.btn:active {
+    transform: scale(1.05);
+}
+
 .btn-secondary {
     background: white;
     color: #465C88;
     border: 2px solid #465C88;
+}
+
+
+.btn-secondary:active{
+    transform: scale(1.05);
 }
 
 .btn-secondary:hover {
@@ -222,9 +231,14 @@ img{
 span {
     font-weight: bold;
     color: #465C88;
-    border-bottom: 1px solid #465C88;
     font-style: italic;
     font-size: 1em;
+    padding: 10px;
+    text-shadow: 0 4px 10px rgba(0,0,0,0.1)
+}
+
+.text-align{
+    text-align: center;
 }
 
 /* ===============================
@@ -270,6 +284,29 @@ span {
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1)
 }
+
+
+/* ===============================
+   COMMENTS SECTION
+================================= */
+.comments-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 1rem;
+    max-height: 400px;   /* adjust depending on design */
+    overflow-y: auto;    /* enable scrolling */
+    width: auto;        /* keep same width as post card */
+}
+
+.comments-container h2 {
+    position: sticky;
+    top: 0;
+    background: #E9E3DF; /* match body background */
+    padding: 0.5rem 0;
+    z-index: 2;
+}
+
 
 /* ===============================
    ANIMATIONS
